syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "EventTriggerType.proto";

// CmdId: 107
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message ClientTriggerEventNotify {
	EventTriggerType event_type = 10;
	uint32 force_id = 4;
}
