syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 3253
// EnetChannelId: 0
// EnetIsReliable: true
message UnfreezeGroupLimitNotify {
	uint32 point_id = 10;
	uint32 scene_id = 2;
}
