syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ProfilePicture {
	uint32 avatar_id = 1;
	uint32 costume_id = 2;
}
